--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <title>Gift Game</title>
-    <style>
-        @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-            html {
-                transform: rotate(-90deg);
-                transform-origin: left top;
-                width: 100vh;
-                overflow-x: hidden;
-                position: absolute;
-                top: 100%;
-                left: 0;
-            }
-        }
-    </style>
 </head>
 
 <body>
     <script src="game.js"></script>
+    <script>
+        window.initGiftCatch = (responseConfig) => {
+            initGame(responseConfig);
+        }; 
+
+        // Use example initGiftCatch
+        window.initGiftCatch("asd")
+
+
+        // Use example saveCodeGotten
+        console.log(window.saveCodeGotten())
+    </script>
 </body>
 
 </html>
