--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <a href="giftcatchgame"><h1>Gift Catch</h1></a><br/>
-    <a href="findtowingame"><h1>Find To Win</h1></a>
+    <a href="giftcatchgame/gift_catch_index.html"><h1>Gift Catch</h1></a><br/>
+    <a href="findtowingame/find_to_win_index.html"><h1>Find To Win</h1></a>
 </body>
 
 </html>
