--- a/findtowingame/find_to_win.html
+++ b/findtowingame/find_to_win.html
@@ -12,218 +12,18 @@
 <body>
     <script src="find_to_win.js"></script>
     <script>
-
-        let imgs = []
-        function urlCreate() {
-            for (let i = 1; i < 25; i++) {
-                imgs.push("https://picsum.photos/id/" + i + "/300/600")
-            }
+        window.initGiftCatch = function (responseConfig) {
+            initFindToWinGame(responseConfig);
         }
 
-        urlCreate()
-        //android
-        let responseConfig = {
-            "close_event_trigger": "closebutton",
-            "waiting_time": 0,
-            "mail_subscription": true,
-            "mail_subscription_form": {},
-            "gamification_rules": {
-                "background_image": "https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/debug/112_885_323_20220906172507870.jpg",
-                "button_label": "BAŞLA"
-            },
-            "game_elements": {
-                "card_images": imgs,
-                //   "card_images": [
-                //     "https://picsum.photos/id/237/300/600",
-                //     "https://picsum.photos/id/238/300/600",
-                //     "https://picsum.photos/id/239/300/600",
-                //     "https://picsum.photos/id/236/300/600",
-                //     "https://picsum.photos/id/235/300/600",
-                //     "https://picsum.photos/id/234/300/600",
-                //     "https://picsum.photos/id/236/300/600",
-                //     "https://picsum.photos/id/236/300/600",
-                //     "https://picsum.photos/id/236/300/600",
-                //     "https://picsum.photos/id/236/300/600",
-                // ],
-                "playground_rowcount": 1,
-                "playground_columncount": 2,
-                "duration_of_game": 3,
-                "sound_url": "https://bariisarslans.github.io/giftcatchgame/sound.mp3"
-            },
-            "game_result_elements": {
-                "title": "Finiş\nalt satır",
-                "message": "İndirim \nindirim alt satır",
-                "lose_image": "https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/debug/112_885_323_20220906172507870.jpg",
-                "lose_button_label": "loser",
-                "lose_ios_lnk": "http://iOS-loser",
-                "lose_android_lnk": "http://Android-loser"
-            },
-            "copybutton_label": "Copy to clipboard",
-            "copybutton_function": "copy",
-            "ios_lnk": "",
-            "android_lnk": "",
-            "promo_codes": [
-                {
-                    "rangebottom": 1,
-                    "rangetop": 3,
-                    "staticcode": "QWEGH65634"
-                },
-                {
-                    "rangebottom": 4,
-                    "rangetop": 6,
-                    "staticcode": "QWTTGERHRE"
-                }
-            ],
-            "ExtendedProps": {
-                "background_image": "",
-                "background_color": "#ededed",
-                "font_family": "default",
-                "custom_font_family_ios": "",
-                "custom_font_family_android": "",
-                "close_button_color": "gray",
-                "mail_subscription_form": {},
-                "gamification_rules": {
-                    "button_color": "red",
-                    "button_text_color": "white",
-                    "button_text_size": "10"
-                },
-                "game_elements": {
-                    "scoreboard_shape": "roundedcorners",
-                    "scoreboard_background_color": "#ffb3b3",
-                    "scoreboard_pageposition": "topRight",
-                    "backofcards_image": "https://picsum.photos/id/29/300/600",
-                    "backofcards_color": "#2ea61d",
-                    "blankcard_image": "purple"
-                },
-                "game_result_elements": {
-                    "title_text_color": "",
-                    "title_text_size": "",
-                    "text_color": "",
-                    "text_size": "",
-                    "losebutton_color": "#481b1b",
-                    "losebutton_text_color": "#e1a8a8",
-                    "losebutton_text_size": "7"
-                },
-                "promocode_background_color": "#9a6c6c",
-                "promocode_text_color": "#838383",
-                "copybutton_color": "#a3a3a3",
-                "copybutton_text_color": "#910000",
-                "copybutton_text_size": "3",
-                "promocode_banner_text": "",
-                "promocode_banner_text_color": "",
-                "promocode_banner_background_color": "",
-                "promocode_banner_button_label": ""
-            },
+        if (window.Android) {
+            let responseConfig = Android.getResponse();
+            initFindToWinGame(responseConfig);
+        } else if (window.webkit.messageHandlers.eventHandler) {
+            window.webkit.messageHandlers.eventHandler.postMessage({
+                method: "initGiftCatch"
+            })
         }
-        // if (window.Android) {
-        //     let responseConfig = Android.getResponse();
-        //     initFindToWinGame(responseConfig);
-        // }
-
-        // ios
-        let responseConfigIOS = {
-            "gamificationRules": {
-                "backgroundImage": "https:\/\/imgvisilabsnet.azureedge.net\/find_to_win\/uploaded_images\/test\/112_885_490_20220920162012621.jpg",
-                "buttonLabel": "OKAY"
-            },
-            "copybutton_text_color": "#FFFFFF",
-            "mailSubscriptionForm": {
-                "placeholder": "Your e-mail",
-                "consentText": "consent text",
-                "title": "Title1\\nTitle2",
-                "message": "Text1\\nText2",
-                "checkConsentMessage": "consent not checked",
-                "invalidEmailMessage": "invalid email",
-                "emailPermitText": "permit text",
-                "buttonTitle": "Subscribe",
-                "successMessage": "successful"
-            },
-            "ios_lnk": "https:\/\/www.relateddigital.com\/en\/",
-            "title": "Find-To-Win-Test",
-            "report": {},
-            "promocode_background_color": "#20D023",
-            "mailExtendedProps": {
-                "buttonTextSize": "5",
-                "textSize": "5",
-                "buttonTextColor": "#FFFFFF",
-                "titleTextColor": "#11A912",
-                "consentTextUrl": "https:\/\/www.relateddigital.com\/en\/",
-                "consentTextSize": "5",
-                "textColor": "#18B214",
-                "emailPermitTextSize": "5",
-                "titleFontFamily": "",
-                "titleTextSize": "5",
-                "emailPermitTextUrl": "https:\/\/www.relateddigital.com\/en\/",
-                "buttonColor": "#25D766"
-            },
-            "gameResultElementsExtended": {
-                "titleTextSize": "5",
-                "losebuttonTextSize": "",
-                "losebuttonColor": "",
-                "textSize": "",
-                "titleTextColor": "#11CC59",
-                "textColor": "#0BAF16",
-                "losebuttonTextColor": ""
-            },
-            "promocode_banner_button_label": "Copy",
-            "targetingActionType": "findtowin",
-            "gamificationRulesExtended": {
-                "buttonTextSize": "5",
-                "buttonTextColor": "#FFFFFF",
-                "buttonColor": "#10C261"
-            },
-            "background_color": "#C015C6",
-            "close_button_color": "black",
-            "copybutton_label": "Copy",
-            "actId": 490,
-            "copybutton_text_size": "5",
-            "custom_font_family_ios": "",
-            "promocode_banner_text_color": "#FFFFFF",
-            "backgroundImage": "",
-            "auth": "",
-            "promoCodes": [
-                {
-                    "rangebottom": 1,
-                    "rangetop": 50,
-                    "staticcode": "testcode"
-                }
-            ],
-            "promocode_text_color": "#FFFFFF",
-            "promocode_banner_text": "Get your code",
-            "copybutton_color": "#19C068",
-            "copybutton_function": "copy_redirect",
-            "mailSubscription": true,
-            "font_family": "default",
-            "gameElements": {
-                "playgroundColumncount": 5,
-                "playgroundRowcount": 5,
-                "soundUrl": "https:\/\/bariisarslans.github.io\/giftcatchgame\/sound.mp3",
-                "durationOfGame": 3000,
-                "cardImages": imgs
-            },
-            "gameResultElements": {
-                "loseImage": "",
-                "message": "Text1\\nText2",
-                "title": "Title1\\nTitle2",
-                "loseButtonLabel": "LOSE",
-                "loseIosLnk": "www.google.com/images"
-            },
-            "promocode_banner_background_color": "#096D12",
-            "gameElementsExtended": {
-                "scoreboardBackgroundColor": "#1EE348",
-                "scoreboardShape": "circle",
-                "scoreboardPageposition": "topRight",
-                "backofcardsImage": "",
-                "backofcardsColor": "#15DF82",
-                "blankcardImage": ""
-            }
-        }
-
-
-        // android
-        // initFindToWinGame(responseConfig);
-
-        initFindToWinGame(responseConfigIOS)
     </script>
 </body>
 
