--- a/findtowingame/find_to_win.html
+++ b/findtowingame/find_to_win.html
@@ -12,18 +12,23 @@
 <body>
     <script src="find_to_win.js"></script>
     <script>
-        window.initFindGame = function (responseConfig) {
-            initFindToWinGame(responseConfig);
-        }
 
-        if (window.Android) {
-            let responseConfig = Android.getResponse();
-            initFindToWinGame(responseConfig);
-        } else if (window.webkit.messageHandlers.eventHandler) {
-            window.webkit.messageHandlers.eventHandler.postMessage({
-                method: "initFindGame"
-            })
-        }
+        let responseConfig = '{"actid":490,"title":"Find-To-Win-Test","actiontype":"FindToWin","actiondata":{"mail_subscription":false,"mail_subscription_form":{"title":"mail form title\\nalt satırı","message":"mail form message\\nalt satırr","placeholder":"mail","button_label":"Kaydet ve Kuralları Gör","consent_text":"Consent izin metni","invalid_email_message":"Email hatalı","success_message":"Kayıt başarılı yönlendiriliyorsunuz.","emailpermit_text":"Email izin metni","check_consent_message":"Consent checkboxunu işaretlemeden devam edemezsiniz."},"gamification_rules":{"background_image":"https://picsum.photos/id/237/300/600","button_label":"Oyuna Başla"},"game_elements":{"card_images":["https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20220920162048572.jpg","https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20220920162128571.jpg","https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20221013172102933.png","https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20221013172110841.png","https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20221013173752790.png","https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20221013173757902.png","https://imgvisilabsnet.azureedge.net/find_to_win/uploaded_images/test/112_885_490_20221018002145850.png"],"playground_rowcount":3,"playground_columncount":5,"duration_of_game":1,"sound_url":"https://bariisarslans.github.io/giftcatchgame/sound.mp3"},"game_result_elements":{"title":"Title1\\nTitle2","message":"Text1\\nText2","lose_image":"https://picsum.photos/id/237/300/600","lose_button_label":"EXIT","lose_ios_lnk":"https://www.relateddigital.com/en/","lose_android_lnk":"https://www.relateddigital.com/en/"},"copybutton_label":"COPYY","copybutton_function":"copy","ios_lnk":"","android_lnk":"","promo_codes":[{"rangebottom":1,"rangetop":999,"staticcode":"testcode"}],"ExtendedProps":"%7B%22background_image%22%3A%22https%3A%2F%2Fimgvisilabsnet.azureedge.net%2Ffind_to_win%2Fuploaded_images%2Ftest%2F112_885_490_20221013173717695.png%22%2C%22background_color%22%3A%22%22%2C%22font_family%22%3A%22sansserif%22%2C%22custom_font_family_ios%22%3A%22%22%2C%22custom_font_family_android%22%3A%22%22%2C%22close_button_color%22%3A%22black%22%2C%22mail_subscription_form%22%3A%7B%22title_text_color%22%3A%22%233f00ff%22%2C%22title_text_size%22%3A%226%22%2C%22text_color%22%3A%22%23ff0094%22%2C%22text_size%22%3A%224%22%2C%22button_color%22%3A%22%2300ff82%22%2C%22button_text_color%22%3A%22%23000000%22%2C%22button_text_size%22%3A%226%22%2C%22emailpermit_text_size%22%3A%223%22%2C%22emailpermit_text_url%22%3A%22www.emailpermit.com%22%2C%22consent_text_size%22%3A%223%22%2C%22consent_text_url%22%3A%22www.consentpermit.com%22%7D%2C%22gamification_rules%22%3A%7B%22button_color%22%3A%22%23ff0000%22%2C%22button_text_color%22%3A%22%23ffffff%22%2C%22button_text_size%22%3A%2210%22%7D%2C%22game_elements%22%3A%7B%22scoreboard_shape%22%3A%22roundedcorners%22%2C%22scoreboard_background_color%22%3A%22%231dd7d2%22%2C%22scoreboard_pageposition%22%3A%22topRight%22%2C%22backofcards_image%22%3A%22https%3A%2F%2Fimgvisilabsnet.azureedge.net%2Ffind_to_win%2Fuploaded_images%2Ftest%2F112_885_490_20221013173811537.jpg%22%2C%22backofcards_color%22%3A%22%22%2C%22blankcard_image%22%3A%22https%3A%2F%2Fimgvisilabsnet.azureedge.net%2Ffind_to_win%2Fuploaded_images%2Ftest%2F112_885_490_20221018002309425.png%22%7D%2C%22game_result_elements%22%3A%7B%22title_text_color%22%3A%22%23000000%22%2C%22title_text_size%22%3A%226%22%2C%22text_color%22%3A%22%23000000%22%2C%22text_size%22%3A%22022-10-18 01:07:42.173 27119-27316/com.relateddigital.androidexampleapp I/okhttp.OkHttpClient: 25%22%2C%22losebutton_color%22%3A%22%23C40cbba0%22%2C%22losebutton_text_color%22%3A%22%23000000%22%2C%22losebutton_text_size%22%3A%225%22%7D%2C%22promocode_background_color%22%3A%22%231ec4d2%22%2C%22promocode_text_color%22%3A%22%23000000%22%2C%22copybutton_color%22%3A%22%2313ceb5%22%2C%22copybutton_text_color%22%3A%22%23000000%22%2C%22copybutton_text_size%22%3A%225%22%2C%22promocode_banner_text%22%3A%22GET%20CODE%22%2C%22promocode_banner_text_color%22%3A%22%23000000%22%2C%22promocode_banner_background_color%22%3A%22%2324a7d1%22%2C%22promocode_banner_button_label%22%3A%22GET%22%7D","report":{"impression":"","click":"OM.zn=acttype-36&OM.zpc=act-490"},"auth":"1BD92D887AC6B713D02D27217CFE3B033C955177E5125222BCF6C4D4F43EED47","type":"subscription_email","waiting_time":0}}'
+
+        initFindToWinGame(responseConfig);
+
+        // window.initFindGame = function (responseConfig) {
+        //     initFindToWinGame(responseConfig);
+        // }
+
+        // if (window.Android) {
+        //     let responseConfig = Android.getResponse();
+        //     initFindToWinGame(responseConfig);
+        // } else if (window.webkit.messageHandlers.eventHandler) {
+        //     window.webkit.messageHandlers.eventHandler.postMessage({
+        //         method: "initFindGame"
+        //     })
+        // }
     </script>
 </body>
 
