--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <a href="giftcatchgame/gift_catch.html"><h1>Gift Catch</h1></a><br/>
     <a href="findtowingame/find_to_win.html"><h1>Find To Win</h1></a>
+    <a href="flygame/fly.html"><h1>Fly Game</h1></a>
 </body>
 
 </html>
