--- a/flygame/fly.html
+++ b/flygame/fly.html
@@ -10,8 +10,9 @@
         .container {
             width: "100%";
             height: 600px;
-            border: 1px solid red;
+            border: 1px solid #124364;
             position: relative;
+            /* overflow: hidden; */
         }
 
         .item {
@@ -21,7 +22,6 @@
             position: absolute;
             bottom: 0;
         }
-
     </style>
 </head>
 
@@ -31,7 +31,7 @@
     <script src="fly.js"></script>
     
     <script>
-        initGame("container");
+        initGame();
     </script>
 </body>
 
