--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="giftcatchgame/gift_catch.html"><h1>Gift Catch</h1></a><br/>
     <a href="findtowingame/find_to_win.html"><h1>Find To Win</h1></a>
     <a href="flygame/fly.html"><h1>Fly Game</h1></a>
+    <a href="jackpot/jackpot.html"><h1>jackpot</h1></a>
+    <a href="giftboxgame/giftbox.html"><h1>Giftbox</h1></a>
 </body>
 
 </html>
