--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             z-index: 9;
             font-family: 'Poiret One', sans-serif;
             padding-left: 50px;
+            overflow: scroll;
         }
         .background {
             background-repeat: no-repeat;
