--- a/findtowin/find_to_win.html
+++ b/findtowin/find_to_win.html
@@ -38,13 +38,13 @@
                 "textSize": "6",
                 "buttonTextColor": "#ffffff",
                 "titleTextColor": "#e85731",
-                "consentTextUrl": "https:\/\/www.relateddigital.com",
+                "consentTextUrl": "https:\/\/www.example.com",
                 "consentTextSize": "5",
                 "textColor": "#e85731",
                 "emailPermitTextSize": "5",
                 "titleFontFamily": "",
                 "titleTextSize": "10",
-                "emailPermitTextUrl": "https:\/\/www.relateddigital.com",
+                "emailPermitTextUrl": "https:\/\/www.example.com",
                 "buttonColor": "#e85731"
             },
             "gameResultElementsExtended": {
@@ -121,7 +121,7 @@
                 "message": "Oyun Tamamlandı.\nKazandığınız indirim kuponunu kopyalayıp\nsiparişinizde kullanabilirsiniz.",
                 "title": "Tebrikler",
                 "loseButtonLabel": "Kazanamadınız",
-                "loseIosLnk": "https:\/\/www.relateddigital.com\/en\/"
+                "loseIosLnk": "https:\/\/www.example.com\/en\/"
             },
             "promocode_banner_background_color": "#2e3d49",
             "gameElementsExtended": {
