--- a/giftrain/index.html
+++ b/giftrain/index.html
@@ -88,7 +88,7 @@
                         "button_text_color": "#ffffff",
                         "button_text_size": "10",
                         "emailpermit_text_size": "5",
-                        "emailpermit_text_url": "https://www.relateddigital.com/en/",
+                        "emailpermit_text_url": "https://www.example.com/en/",
                         "consent_text_size": "",
                         "consent_text_url": ""
                     },
